--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,18 +12,21 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@urbica/react-map-gl": "^1.14.3",
+    "apexcharts": "^3.29.0",
     "axios": "^0.21.3",
     "clsx": "^1.1.1",
+    "date-fns": "^2.25.0",
     "deck.gl": "^8.6.0",
     "geojson": "^0.5.0",
     "mapbox-gl": "^2.0.1",
     "rc-slider": "^9.7.4",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-click-away-listener": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-query": "^3.17.0",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
-    "recharts": "^2.1.5",
     "use-debounce": "^7.0.0",
     "web-vitals": "^1.0.1"
   },
